project invitation email

--- a/public/email/invitation/project.html
+++ b/public/email/invitation/project.html
@@ -97,7 +97,7 @@
 
 <!-- HIDDEN PREHEADER TEXT -->
 <div style="display: none; font-size: 1px; color: #fefefe; line-height: 1px; font-family: Helvetica, Arial, sans-serif; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden;">
-    {{from}} invited you to the {{team_name}} team on The Varsity!
+    {{from}} invited you to the {{team_name}} project on The Varsity!
 </div>
 
 <!-- HEADER -->
@@ -205,11 +205,6 @@
                             <tr>
                                 <td align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; color: #333333;" class="padding">The Varsity Advantage</td>
                             </tr>
-                            <tr>
-                                <td align="center" style="padding: 20px 0 20px 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding">
-                                    Find Your Next Job or Hire Through The Varsity
-                                </td>
-                            </tr>
                         </table>
                     </td>
                 </tr>
@@ -313,106 +308,7 @@
                         <![endif]-->
                     </td>
                 </tr>
-                <tr>
-                    <td align="center" height="100%" valign="top" width="100%">
-                        <!--[if (gte mso 9)|(IE)]>
-                        <table align="center" border="0" cellspacing="0" cellpadding="0" width="500">
-                        <tr>
-                        <td align="center" valign="top" width="500">
-                        <![endif]-->
-                        <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:500px;">
-                            <tr>
-                                <td align="center" valign="top" style="font-size:0;" class="padding">
-                                    <!--[if (gte mso 9)|(IE)]>
-                                    <table align="center" border="0" cellspacing="0" cellpadding="0" width="500">
-                                    <tr>
-                                    <td align="left" valign="top" width="240">
-                                    <![endif]-->
-                                    <div style="display:inline-block; margin: 0 -2px; max-width:50%; min-width:240px; vertical-align:top; width:100%;" class="wrapper">
-                                        <table align="left" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:240px;" class="wrapper">
-                                            <tr>
-                                                <td align="center" valign="top">
-                                                    <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                                                        <tr>
-                                                            <td style="padding: 20px 0 30px 0;">
-                                                                <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                                                                    <tr>
-                                                                        <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank"><img src="https://thevarsity.herokuapp.com/images/meetup.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="alt text here" border="0" class="img-max"></a></td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">More Revenue</td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA">Group admins can charge fees for posting to the bulletin board. Fees go directly to the group moderator. * This is a premium feature.</td>
-                                                                    </tr>
-                                                                    <tr>
-                                                                        <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co?invite={{invitation}}" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
-                                                                    </tr>
-                                                                </table>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
 
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </div>
-                                    <!--[if (gte mso 9)|(IE)]>
-                                    </td>
-									                  <td width="20" style="font-size: 1px;">&nbsp;</td>
-                                    <td align="right" valign="top" width="240">
-                                    <![endif]-->
-                                    <div style="display:inline-block; margin: 0 -2px; max-width:50%; min-width:240px; vertical-align:top; width:100%;" class="wrapper">
-                                        <table cellspacing="0" cellpadding="0" border="0" width="100%">
-                                            <tr>
-                                                <td class="mso-right">
-                                                    <table align="left" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:240px; float: right;" class="wrapper">
-                                                        <tr>
-                                                            <td align="center" valign="top">
-
-                                                                <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                                                                    <tr>
-                                                                        <td style="padding: 20px 0 30px 0;">
-                                                                            <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                                                                                <tr>
-                                                                                    <td align="center" bgcolor="#F5F7FA" valign="middle"><a href="http://www.thevarsity.co?invite={{invitation}}" target="_blank"><img src="http://www.thevarsity.co/images/girls.jpg" style="display: block; color: #666666; font-family: Helvetica, arial, sans-serif; font-size: 13px; width: 240px;" alt="alt text here" border="0" class="img-max"></a></td>
-                                                                                </tr>
-                                                                                <tr>
-                                                                                    <td align="center" style="padding: 15px 0 0 0; font-family: Arial, sans-serif; color: #333333; font-size: 20px;" bgcolor="#F5F7FA">Industry Insight</td>
-                                                                                </tr>
-                                                                                <tr>
-                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA">Learn from your peers as you share professional insight on how to hone your craft, gain new clientele, promote your brand and expand your business.</td>
-                                                                                </tr>
-                                                                                <tr>
-                                                                                    <td align="center" style="padding: 5px 0 0 0; font-family: Arial, sans-serif; color: #666666; font-size: 14px; line-height: 20px;" bgcolor="#F5F7FA"><a href="http://www.thevarsity.co?invite={{invitation}}" style="color: #256F9C; text-decoration: none;">Read More &rarr;</a></td>
-                                                                                </tr>
-                                                                            </table>
-                                                                        </td>
-                                                                    </tr>
-                                                                </table>
-
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                    </div>
-                                    <!--[if (gte mso 9)|(IE)]>
-                                    </td>
-                                    </tr>
-                                    </table>
-                                    <![endif]-->
-                                </td>
-                            </tr>
-                        </table>
-                        <!--[if (gte mso 9)|(IE)]>
-                        </td>
-                        </tr>
-                        </table>
-                        <![endif]-->
-                    </td>
-                </tr>
             </table>
             <!--[if (gte mso 9)|(IE)]>
             </td>
